manifests/deployment.yml
  
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phippy
  labels:
    app: phippy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: phippy
  template:
    metadata:
      labels:
        app: phippy
    spec:
      containers:
      - name: phippy
        image: shashankbarsin/phippy
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
