manifests/smart-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: smart-phippy
  labels:
    app: phippy
spec:
  containers:
  - name: phippy
    image: shashankbarsin/phippy
    imagePullPolicy: Always
    ports:
    - containerPort: 80
