manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: phippy
  labels:
    app: phippy
spec:
  selector:
    app: phippy
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  type: LoadBalancer
